syntax = "proto3";

package grpc;

option go_package = "grpc.example/grpc";

// The user service definition.
service User {
    // Sends a greeting
    rpc FindById (FindByIdRequest) returns (FindByIdReply) {}
  }
  
  // The request message containing the user's id.
  message FindByIdRequest {
    string id= 1;
  }
  
  // The response message containing the user
  message FindByIdReply {
    string id = 1;
    string name = 2;
  }